--- a/src/components/section/footer/style.scss
+++ b/src/components/section/footer/style.scss
@@ -5,10 +5,7 @@
   align-items: center;
   flex-wrap: wrap;
   margin: 100px 0;
-  outline: 1px solid red;
-  * {
-    outline: 1px solid red;
-  }
+  outline: 1px solid;
   .text {
     margin: 0 auto;
     font-size: 17px;
@@ -44,9 +41,11 @@
   }
 }
 
-.link-inverse {
-  border: none !important;
-  &:hover {
-    padding-bottom: none;
+.pxw {
+  outline: 1px solid red;
+  display: block;
+
+  @media (max-width: 490px) {
+    width: 100%;
   }
 }
