--- a/src/index.scss
+++ b/src/index.scss
@@ -146,6 +146,8 @@ ul {
   -webkit-transition: all 200ms ease;
   transition: all 200ms ease;
   cursor: pointer;
+  // outline: 1px solid red;
+  display: inline-table;
 
   &:hover {
     padding-bottom: 4px;
